--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,19 +1,40 @@
-<!-- call to action -->
-<form class="registration">
-    <h2 class="registration__title">Registration</h2>
-    <div class="registration-info">
-        <p class="registration-info__date">May 23, 11:00 New York</p>   
-        <p class="registration-info__price">$ 699</p>
+<!-- registration-section -->
+<section class="section">
+     <div class="container">
+        <div class="registration">
+                <picture>
+                        <source srcset="./images/image-tablet-@1x.jpg 1x, ./images/image-tablet-@2x.jpg 2x" media="(min-width: 768px)"/>
+                        <source srcset="./images/image-desktop-@1x.jpg 1x, ./images/image-desktop-@2x.jpg 2x" media="(min-width: 1280px)"/>
+                        <img class="image_class" src="./images/image-tablet-@1x.jpg" srcset="./images/image-tablet-@2x.jpg 2x"
+                        alt="Image name"/>
+                </picture>
+                 <h2 class="registration__title">Registration</h2>
+             <ul class="registration-info">
+                 <li class="registration-info__item">
+                     <p class="registration-info__date">May 23, 11:00 <span class="registration-info__place">New York</span></p>
+                 </li>
+                 <li class="registration-info__item">   
+                     <p class="registration-info__price">$ 699</p>
+                 </li>
+             </ul>
+             <form class="registration-form">
+                     <p class="registration-form__text">Apply your personal info for registration </p>
+                 <div class="registration-field">
+                     <input class="name registration-field__input" name="name" id="name" placeholder="Your name" pattern="^[a-zA-Z]+\s[a-zA-Z]+$"  title="Username must be two words separated by space." required/>
+                         <label for="name" class="registration-field__lable"></label>
+                     <input class="phone registration-field__input" name="phone" id="phone" placeholder="Phone number" pattern="\+?[0-9\s\-\(\)]+" title="Phone number must be ." required/>
+                         <label for="phone" class="registration-field__lable"></label>
+                     <input class="email registration-field__input" name="email" id="email" placeholder="E-mail" pattern=".+@.+.com" required/>
+                         <label for="email" class="registration-field__lable"></label>
+                     <button type="submit" class="registration-field__call">Register</button>
+                 </div>
+             </form>
+                <picture>
+                        <source srcset="./images/image-tablet-@1x.jpg 1x, ./images/image-tablet-@2x.jpg 2x" media="(min-width: 768px)"/>
+                        <source srcset="./images/image-desktop-@1x.jpg 1x, ./images/image-desktop-@2x.jpg 2x" media="(min-width: 1280px)"/>
+                        <img class="image_class" src="./images/image-tablet-@1x.jpg" srcset="./images/image-tablet-@2x.jpg 2x"
+                        alt="Image name"/>
+                </picture>
+         </div>
      </div>
-    <div class="registration-field">
-        <p class="registration-field__text">Apply your personal info
-            for registration </p>
-        <input class="name registration-field__input" name="name" id="name" placeholder="Your name" required/>
-        <label for="name" class="registration-field__lable"></label>
-        <input class="phone registration-field__input" name="phone" id="phone" placeholder="Phone number" required/>
-        <label for="phone" class="registration-field__lable"></label>
-        <input class="email registration-field__input" name="email" id="email" placeholder="E-mail" required/>
-        <label for="email" class="registration-field__lable"></label>
-        <button type="submit" class="registration-field__call">Register</button>
-    </div>
-</form>
+</section>
